Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83632

In top level frameless window Qt.CrossCursor does not comes in effect

    XMLWordPrintable

Details

    • macOS
    • 24b07b2b2d367c61b911c8f3a72f7209ef7e00d2 (qt/qtbase/dev) e1cc406ea41b389862c8fc7f89be718f65363ff0 (qt/qtbase/6.0) 072121184f341c193d96ea26a874e1c201e73440 (qt/tqtc-qtbase/tqtc/lts-5.15) 57e2003982c31a24e86293cd54fe7514627a2d55 (qt/qtbase/6.1)

    Description

      In a frameless stay on top window to render a selection rectangle, when cursor change is requested this does not show Cross cursor unless mouse is not clicked,

      This only happens on Mac, On Windows and Linux this works as expected. Attahed is the example which reproduces it, Run on mac and you wont see cross cursor untill you click mouse.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: